tests/baselines/reference/typeGuardNarrowsIndexedAccessOfKnownProperty10.errors.txt
typeGuardNarrowsIndexedAccessOfKnownProperty10.ts(5,6): error TS2448: Block-scoped variable 'id' used before its declaration.


==== typeGuardNarrowsIndexedAccessOfKnownProperty10.ts (1 errors) ====
    interface Foo { bar: any; }
    const bar: { [id: string]: number } = {};
    
    (foo: Foo) => {
    	bar[id]++;
    	    ~~
!!! error TS2448: Block-scoped variable 'id' used before its declaration.
!!! related TS2728 typeGuardNarrowsIndexedAccessOfKnownProperty10.ts:6:8: 'id' is declared here.
    	const id = foo.bar;
    }
    